# TelloDroneControlSystem

./: LICENSE  README.md  TELLO_DRONE_CONTROL_DOCUMENTATION.docx  TELLO_DRONE_CONTROL_DOCUMENTATION.md  build_gui_app.py  build_windows_app.py  create_windows_executables.py  dependencies.txt  drone_cli.py  drone_gui.py  example_usage.py  pyproject.toml  tello_drone_agent.py  tello_simulator.py  test_video_simulator.py
attached_assets/: Pasted--12-29-39-AI-interpreted-please-takeoff-and-move-forward-100cm-then-take-a-photo-and-describe--1758092455493_1758092455494.txt  Pasted--15-11-27-Starting-360-Panorama-Capture-with-sequential-commands-15-11-27-Executing-pa-1758188581679_1758188581680.txt  Pasted--15-21-27-Starting-360-Panorama-Capture-with-sequential-commands-15-21-27-Executing-pa-1758189148947_1758189148948.txt  Pasted--22-06-29-Command-text-go-forward-and-make-a-circle-then-take-a-picture-and-describe-it-in-o-1758127046526_1758127046527.txt  Pasted--usr-bin-env-python3-Autonomous-Realtime-Drone-Agent-using-GPT-4o-Realtime-API-Provides-spe-1758104186639_1758104186641.txt  Pasted-12-43-54-Command-text-take-photo-and-describe-12-43-54-Processing-with-Azure-OpenAI--1758093308724_1758093308725.txt  Pasted-14-42-28-Executing-AI-planned-mission-via-sequential-processor-14-42-28-Mission-validate-1758186787509_1758186787509.txt
