[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "djitellopy>=2.5.0",
    "fastapi>=0.116.2",
    "gtts>=2.5.4",
    "markdown2>=2.5.4",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "openai>=1.107.3",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "pyinstaller>=6.16.0",
    "pypandoc>=1.15",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "pyttsx3>=2.99",
    "simpleaudio>=1.0.4",
    "speechrecognition>=3.14.3",
    "tensorflow>=2.20.0",
    "tensorflow-hub>=0.16.1",
    "uvicorn>=0.35.0",
    "weasyprint>=66.0",
    "websockets>=15.0.1",
]
